--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,5 +1,5 @@
 name: Makefile CI
-
+https://github.com/sumithak/download_file/tree/main
 on:
   push:
     branches: [ "main" ]
@@ -12,16 +12,22 @@ jobs:
     runs-on: ubuntu-latest
     env:
       URL: https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-      OUTPUT_PATH: nuget.exe
 
     steps:
     - uses: actions/checkout@v3
 
     - name: configure
+      id: configure
       run: make setup
 
     - name: Run Unit Test
+      id: unittest
       run: make unittest
+      
+    - name: Check for failure
+      if: steps.unittest.outcome != 'Success'
+      run: exit 1    
 
     - name: Run Package Build
+      id: packagebuild
       run: make package
