--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       URL: https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+      OUTPUT_PATH: nuget.exe
 
     steps:
     - uses: actions/checkout@v3
